image orientation issue fixed on iphones

--- a/src/components/MarkerTable/MarkerTable.css
+++ b/src/components/MarkerTable/MarkerTable.css
@@ -3,8 +3,7 @@
 }
 
 .imgStyle {
-    max-height: 20rem;
-    max-width: 20rem;
+    border-radius: 15px;
     transform: rotate(90deg);
     -webkit-transform: rotate(90deg);
     transform-origin: center;
@@ -12,4 +11,12 @@
 
 .delete {
     cursor: pointer;    
+}
+
+.img-table-ios {
+    width: 100%;
+    height: auto;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    border-bottom: 2px solid lightgrey;
 }
