--- a/src/components/SimpleMap/SimpleMap.css
+++ b/src/components/SimpleMap/SimpleMap.css
@@ -7,3 +7,11 @@
     transform-origin: center;
     margin: 30px 0;
 }
+
+.imgIOS {
+    max-width: 15rem;
+    max-height: 15rem;
+    margin-bottom: 1rem;
+    margin-right: 1rem;
+    border-radius: 5%;
+}
